# matrix-photos

./: .gitignore  .pylintrc  Pipfile  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: pypi-deploy.yml  pypi-release.yml  release.yml  run-checks.yml
docker/: README.md  createuser.sh  docker-compose.yml
matrix_photos/: __init__.py  __main__.py  admin_command_handler.py  config-example.yml  configuration.py  file_convert.py  photos_client.py  storage_strategy.py  text_message_command_handler.py  utils.py
tests/: test_configuration.py
