[tool.poetry]
name = "matrix-photos"
version = "0.0.5b7"
description = "A matrix client for the photOS DIY photoframe"
authors = ["universalappfactory <info@universalappfactory.de>"]
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://github.com/universalappfactory/matrix-photos"
repository = "https://github.com/universalappfactory/matrix-photos"

classifiers = [
    "Environment :: No Input/Output (Daemon)",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Communications :: Chat",
    "Topic :: Communications :: File Sharing",
    "Topic :: Multimedia :: Graphics",
]

exclude = ["tests", "tests/*"]

[tool.poetry.dependencies]
python = "^3.8"
mautrix = "^0.14.10"
PyYAML = "^6.0"
SQLAlchemy = "^1.3.*"
aiohttp = "^3.*.*"
aiosqlite = "^0.17.*"
python-olm = "^3.*.*"
pycryptodome = "^3.*.*"
unpaddedbase64 = "^1.*.*"
psycopg2-binary = "^2.*.*"
asyncpg = "^0.25.*"
pyyaml = "^6.0.0"


[tool.poetry.dev-dependencies]
pylint = "^2.12.2"
pytest = "^7.1.0"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = [
    "setup.cfg:version",
    "pyproject.toml:version",
]
branch = "main"
build_command = "pip install -m poetry && poetry build"

[tool.poetry.scripts]

