[metadata]
name = matrix-photos
version = 0.0.3b2
url = https://github.com/universalappfactory/matrix-photos
author = universalappfactory
author_email = info@universalappfactory.de
license = GPL, Version 3.0
license_file = LICENSE
description = A matrix client for the photOS DIY photoframe
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Environment :: No Input/Output (Daemon)
    Intended Audience :: End Users/Desktop
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Multimedia :: Graphics
    Topic :: Communications :: Chat
    Topic :: Communications :: File Sharing
    Topic :: Multimedia :: Graphics


[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >= 3.7
install_requires =
    mautrix>=0.12.2,<0.13
    aiohttp>=3,<4
    aiosqlite>=0.16,<0.18
    python-olm>=3,<4
    pycryptodome>=3,<4
    unpaddedbase64>=1,<2
    psycopg2-binary>=2,<3
    asyncpg>=0.20,<0.26
    SQLAlchemy>=1,<1.4
    pyyaml==6.0


[options.extras_require]
lint =
    pylint
    pep8

[options.packages.find]
exclude =
    tests
    tests.*

[options.entry_points]
console_scripts =
    matrixphotos = matrix_photos.__main__:main